Fix buffet search result cards on composite
Giving them a minimum width class of E doesn't quite fit on the screen,
so we need to change the minimum to D and add styling for that in the
normal case. We also add some padding to the list box rows on composite
so that the cards are not squished up against the edge.

[endlessm/eos-sdk#3933]

--- a/data/css/endless_buffet.css
+++ b/data/css/endless_buffet.css
@@ -152,6 +152,11 @@ EknThematicModule .text-card:hover .after {
     font-size: 14px;
 }
 
+.search-result-card.width-d .title,
+.search-result-card.width-d .card-synopsis {
+    font-size: 14px;
+}
+
 .search-result-card.width-e .title,
 .search-result-card.width-e .card-synopsis {
     font-size: 14px;
@@ -376,4 +381,17 @@ EknContextBanner {
     font-family: Lato;
     font-size: 1.0em; /* 16px / 12px/em * 72/96 */
     font-weight: bold;
+}
+
+/* Changes for composite TVs */
+
+.composite .search-results GtkListBoxRow {
+    padding: 0 40px;
+}
+
+.composite .search-result-card.width-d .title,
+.composite .search-result-card.width-d .card-synopsis,
+.composite .search-result-card.width-e .title,
+.composite .search-result-card.width-e .card-synopsis {
+    font-size: 16px;
 }
